# Cataclysm-Cleanwater-Bomb

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cataclysm-DDA.code-workspace  DEMO_CONFLICT.md  DEMO_DRAFT.md  DEMO_NORMAL.md  Makefile  README.md  SYNC_EXCLUDED_PRS.md  TRANSLATION_CREDITS.md  build_zone_test.bat  find_upstream_prs.py  run-lua-ui.sh
.github/: copilot-instructions.md  labeler.yml  reviewers.yml
.tx/: config
data/: changelog.txt
doc/: TRANSLATING.md
msvc-full-features/: Cataclysm-common.props  Cataclysm-libMZ-vcpkg-static.vcxproj  vcpkg.json
src/: CMakeLists.txt  action.cpp  action.h  activity_actor.cpp  activity_actor_definitions.h  activity_handlers.h  activity_item_handling.cpp  activity_item_handling.h  advanced_inv.cpp  android_character_creator.cpp  android_character_creator.h  android_hud.cpp  android_hud.h  android_imgui_dialog.cpp  android_imgui_dialog.h  android_native_ui.cpp  android_native_ui.h  animation.cpp  auto_pickup.cpp  auto_pickup.h  ballistics.cpp  cata_imgui.cpp  cata_imgui.h  cata_shader.cpp  cata_tiles.cpp  cata_tiles.h  catalua_sol.h  catalua_ui.cpp  catalua_ui.h  catalua_ui_actions.cpp  catalua_ui_actions.h  catalua_ui_actions_internal.h  catalua_ui_game.cpp  catalua_ui_game.h  catalua_ui_imgui.cpp  catalua_ui_imgui.h  catalua_ui_manifest.cpp  catalua_ui_manifest.h  catalua_ui_renderer.cpp  catalua_ui_renderer.h  (+174 more)
src/sol/: CMakeLists.txt
tests/: advanced_inventory_test.cpp  cata_catch.h  cata_utility_test.cpp  catalua_ui_test.cpp  clzones_test.cpp  craft_attention_test.cpp  eoc_test.cpp  explosion_light_test.cpp  (+24 more)
(+328 files in other folders)
